  *  - Library Applications:
  *   - None
  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - Fixed ring buffer size limited to 255 elements, instead of the intended 65535 elements.
  *   - Fixed CDC class drivers not saving and sending all 16-bits of the control line states (thanks to Matthew Swabey)
  *  - Library Applications:
  *   - Added reliability patches to the AVRISP-MKII Clone project's PDI/TPI protocols (thanks to Justin Mattair)
  *   - Fixed AVRISP-MKII Clone compile warning on AVR8 U4 targets even when NO_VTARGET_DETECT is enabled
  *
  *  \section Sec_ChangeLog111009 Version 111009
  *  <b>New:</b>
  *  - Core:
  *   - Added USE_LUFA_CONFIG_HEADER compile time option to include a LUFAConfig.h header in the user director for LUFA configuration
  *     tokens as an alternative to tokens defined in the project makefile
  *   - Added new USB_Host_SetInterfaceAltSetting() convenience function for the selection of an interface's alternative setting
  *   - Added Audio class control request definitions
  *   - Added new CALLBACK_Audio_Device_GetSetEndpointProperty() callback to the Audio Device Class driver to allow for endpoint control manipulations
  *     such as data sample rates
  *   - Added support for the Audio class GET STATUS request in the Audio Device Class driver so that it is correctly ACKed when sent by the host
  *   - Added new EVENT_Audio_Device_StreamStartStop() event to the Audio Device Class driver to detect stream start/stop events
  *   - Added board driver support for the Busware TUL board
  *   - Added board hardware driver support for the EVK1100 board
  *   - Added board hardware driver support for the EVK1104 board
  *   - Added new Host mode Audio Class driver
  *   - Added new SPI_GetCurrentMode() function to the SPI peripheral driver
  *   - Added RingBuffer_GetFreeCount() function to the Ring Buffer driver
  *   - Added new HID_Host_SetIdlePeriod() function to the HID Host Class driver