@@ -26,6 +26,7 @@
   *  - Core:
   *   - Fixed ring buffer size limited to 255 elements, instead of the intended 65535 elements.
   *   - Fixed CDC class drivers not saving and sending all 16-bits of the control line states (thanks to Matthew Swabey)
+  *   - Fixed race conditions in the CDC, HID and Mass Storage class drivers when processing some control requests
   *  - Library Applications:
   *   - Added reliability patches to the AVRISP-MKII Clone project's PDI/TPI protocols (thanks to Justin Mattair)
   *   - Fixed AVRISP-MKII Clone compile warning on AVR8 U4 targets even when NO_VTARGET_DETECT is enabled
